use https for the octodex images

--- a/team/index.html
+++ b/team/index.html
@@ -119,14 +119,14 @@ love to chat.
     <div class='span4'>
 
 
-      <a href="https://github.com/josharian/"><img src='http://octodex.github.com/images/murakamicat.png' /></a>
+      <a href="https://github.com/josharian/"><img src='https://octodex.github.com/images/murakamicat.png' /></a>
       <h5><a href="http://twitter.com/josharian">Josh</a> <a href="http://www.linkedin.com/in/josharian">Bleecher Snyder</a></h5>
       <p class='role'>Software<a href="/static/images/omgwtf.png"> </a>Engineer</p>
       <p class='bio'>
         <span class='emoji likes'></span><a href="http://www.imdb.com/title/tt0029947/"> </a>glaciers,<a href="http://www.schneier.com/"> </a><a href="http://www.powells.com/biblio/7-9780375406188-13"><em>Plainsong</em></a>,<a href="http://golang.org/"> </a>backpacking,<a href="http://en.wikipedia.org/wiki/Lawrence_Lessig"> </a>scotch,<a href="http://en.wikipedia.org/wiki/Dan_Savage"> </a>Call<a href="http://www.banksy.co.uk/"> </a>Me<a href="http://en.wikipedia.org/wiki/Andy_Goldsworthy"> </a>Maybe,<a href="http://en.wikipedia.org/wiki/Igor_Mitoraj"> </a>alpine<a href="http://www.amazon.com/John-Williams/e/B0034NTD8A/"> </a>lakes,<a href="http://www.bartleby.com/198/1.html"> </a>learning<a href="http://jerichocanyonvineyard.com/"> </a>new<a href="http://en.wikipedia.org/wiki/Google_driverless_car"> </a>things,<a href="http://www.nytimes.com/crosswords/"> </a>significant<a href="http://candies.aniwey.net/"> </a>whitespace,<a href="http://www.elliptigo.com/"> </a>exercise,<a href="http://www.fogofworld.com/"> </a>everything<a href="http://xkcd.com/1032/"> </a>that's<a href="http://www.mrmoneymustache.com/"> </a>not<a href="http://www.powells.com/biblio/9780679734574"> </a>poison<a href="http://en.wikipedia.org/wiki/Ernest_Shackleton"> </a>oak.
       </p>
 
-      <img src='http://octodex.github.com/images/homercat.png'>
+      <img src='https://octodex.github.com/images/homercat.png'>
 
       <h5>Jeff Brateman</h5>
       <p class='role'>Software Engineer</p>
@@ -135,7 +135,7 @@ love to chat.
         hiking, theater, gourmet chips and salsa, biking, galumphing with the Jabberwocky, travel, matchitecture, salads.
       </p>
 
-      <img src='http://octodex.github.com/images/twenty-percent-cooler-octocat.png'>
+      <img src='https://octodex.github.com/images/twenty-percent-cooler-octocat.png'>
 
       <h5><a href="https://twitter.com/burnto">Brent</a> <a href="https://github.com/burnto">Fitzgerald</a></h5>
       <p class='role'>Software Engineer</p>
@@ -150,7 +150,7 @@ love to chat.
 
     <div class='span4'>
 
-      <img src='http://octodex.github.com/images/linktocat.jpg'>
+      <img src='https://octodex.github.com/images/linktocat.jpg'>
 
       <h5>Dave Goldman</h5>
       <p class='role'>Software Engineer</p>
@@ -159,7 +159,7 @@ love to chat.
         science fiction, handstands, trapeze, contradance, that the robot/nanotech/asteroid/gamma-ray-burst apocalypse hasn&rsquo;t yet arrived, the thing currently peering over your left shoulder.
       </p>
 
-      <img src='http://octodex.github.com/images/deckfailcat.png'>
+      <img src='https://octodex.github.com/images/deckfailcat.png'>
 
       <h5>Carol Haverty</h5>
       <p class='role'>Business Development</p>
@@ -169,7 +169,7 @@ love to chat.
       </p>
 
 
-      <img src='http://octodex.github.com/images/pusheencat.png'>
+      <img src='https://octodex.github.com/images/pusheencat.png'>
       <h5>Mike Mettler</h5>
       <p class='role'>
         Product Manager
@@ -185,7 +185,7 @@ love to chat.
     <div class='span4'>
 
 
-      <img src='http://octodex.github.com/images/electrocat.png'>
+      <img src='https://octodex.github.com/images/electrocat.png'>
 
       <h5>Roman Punskyy</h5>
       <p class='role'>Software Engineer</p>
@@ -194,7 +194,7 @@ love to chat.
        technology, mobiles, movies, series, reading books &amp; Dr. Pepper
       </p>
 
-      <img src='http://octodex.github.com/images/octofez.png'>
+      <img src='https://octodex.github.com/images/octofez.png'>
 
       <h5>Ziggy Stardust</h5>
       <p class='role'>Chief Happiness Officer</p>
@@ -203,7 +203,7 @@ love to chat.
         treats, dust bunnies, rocks, dirt, my humans, <a href="/">mobile credit card scanning</a>.
       </p>
 
-      <img src="http://octodex.github.com/images/skitchtocat.png" style="width: 120px">
+      <img src="https://octodex.github.com/images/skitchtocat.png" style="width: 120px">
 
       <h5>Tom Whipple</h5>
       <p class='role'>Software Engineer</p>
