card.io is open source
* Drop "Try it" section.
* card.io is now free like beer AND speech!
* Move "Free" section to top.
* Link to both SDK and source from "Free" section.
  Leave the top right SDK only to prevent clutter.

--- a/index.html
+++ b/index.html
@@ -56,16 +56,6 @@ love to chat.
 
 
 
-
-
-
-
-
-
-
-
-
-
   <div class="navbar navbar-static-top">
     <div class='navbar-inner'>
       <div class="container">
@@ -115,23 +105,12 @@ love to chat.
     </h1>
 
     <h3>
-      Try it
+      Free as in <span class='emoji large beer'></span> and <span class='emoji large speech'></span>
     </h3>
-
-    <ol>
-      <li class='small'>
-        Grab the SDK from GitHub:
-        <a href="https://github.com/card-io/card.io-iOS-SDK">iOS</a>
-        or
-        <a href="https://github.com/card-io/card.io-Android-SDK">Android</a>
-      </li>
-      <li class='small'>
-        <strike>Sign up for an app token.</strike> <em>Just write the code.</em>
-      </li>
-      <li class='small'>
-        Scan cards!
-      </li>
-    </ol>
+    <ul>
+      <li class='small'><a href="https://github.com/card-io/card.io-Android-SDK">Android SDK</a> | Android source (coming soon)</li>
+      <li class='small'><a href="https://github.com/card-io/card.io-iOS-SDK">iOS SDK</a> | <a href="https://github.com/card-io/card.io-iOS-source">iOS source</a></li>
+    </ul>
 
     <h3>Demo</h3>
     <p class='small'>
@@ -142,13 +121,6 @@ love to chat.
       Secure
     </h3>
     <p class='small'>card.io does not store or transmit credit card numbers.</p>
-
-    <h3>
-      Free as in <span class='emoji large beer'></span>
-    </h3>
-    <p class='small'>Free SDKs for <a href="https://github.com/card-io/card.io-Android-SDK">Android</a> and <a href="https://github.com/card-io/card.io-iOS-SDK">iOS</a>.</p>
-
-
 
   </div>
 
