--- a/team/index.html
+++ b/team/index.html
@@ -120,10 +120,11 @@ love to chat.
 
 
       <a href="https://github.com/josharian/"><img src='https://octodex.github.com/images/murakamicat.png' /></a>
-      <h5><a href="http://twitter.com/josharian">Josh</a> <a href="http://www.linkedin.com/in/josharian">Bleecher Snyder</a></h5>
-      <p class='role'>Software<a href="/static/images/omgwtf.png"> </a>Engineer</p>
+      <h5><a href="http://twitter.com/offbymany">Josh</a> <a href="http://www.linkedin.com/in/josharian">Bleecher Snyder</a></h5>
+      <p class='role'>Software Engineer</p>
       <p class='bio'>
-        <span class='emoji likes'></span><a href="http://www.imdb.com/title/tt0029947/"> </a>glaciers,<a href="http://www.schneier.com/"> </a><a href="http://www.powells.com/biblio/7-9780375406188-13"><em>Plainsong</em></a>,<a href="http://golang.org/"> </a>backpacking,<a href="http://en.wikipedia.org/wiki/Lawrence_Lessig"> </a>scotch,<a href="http://en.wikipedia.org/wiki/Dan_Savage"> </a>Call<a href="http://www.banksy.co.uk/"> </a>Me<a href="http://en.wikipedia.org/wiki/Andy_Goldsworthy"> </a>Maybe,<a href="http://en.wikipedia.org/wiki/Igor_Mitoraj"> </a>alpine<a href="http://www.amazon.com/John-Williams/e/B0034NTD8A/"> </a>lakes,<a href="http://www.bartleby.com/198/1.html"> </a>learning<a href="http://jerichocanyonvineyard.com/"> </a>new<a href="http://en.wikipedia.org/wiki/Google_driverless_car"> </a>things,<a href="http://www.nytimes.com/crosswords/"> </a>significant<a href="http://candies.aniwey.net/"> </a>whitespace,<a href="http://www.elliptigo.com/"> </a>exercise,<a href="http://www.fogofworld.com/"> </a>everything<a href="http://xkcd.com/1032/"> </a>that's<a href="http://www.mrmoneymustache.com/"> </a>not<a href="http://www.powells.com/biblio/9780679734574"> </a>poison<a href="http://en.wikipedia.org/wiki/Ernest_Shackleton"> </a>oak.
+        <span class='emoji likes'></span>
+        glaciers, <a href="http://www.powells.com/biblio/7-9780375406188-13"><em>Plainsong</em></a>, backpacking, learning new things, <a href="https://golang.org/cmd/gofmt/">gofmt</a>, chocolate, exercise, being a parent, everything that's not poison oak.
       </p>
 
       <img src='https://octodex.github.com/images/homercat.png'>
