Encode all the things

--- a/team/index.html
+++ b/team/index.html
@@ -124,7 +124,7 @@ love to chat.
       <p class='role'>Software Engineer</p>
       <p class='bio'>
         <span class='emoji likes'></span>
-        glaciers, <a href="http://www.powells.com/biblio/7-9780375406188-13"><em>Plainsong</em></a>, backpacking, learning new things, <a href="https://golang.org/cmd/gofmt/">gofmt</a>, chocolate, exercise, being a parent, everything that's not poison oak.
+        glaciers, <a href="http://www.powells.com/biblio/7-9780375406188-13"><em>Plainsong</em></a>, backpacking, learning new things, <a href="https://golang.org/cmd/gofmt/">gofmt</a>, chocolate, exercise, Shackleton, everything that's not poison oak.
       </p>
 
       <img src='https://octodex.github.com/images/homercat.png'>
