add Android link

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ love to chat.
       Free as in <span class='emoji large beer'></span> and <span class='emoji large speech'></span>
     </h3>
     <ul>
-      <li class='small'><a href="https://github.com/card-io/card.io-Android-SDK">Android SDK</a> | Android source (coming soon)</li>
+      <li class='small'><a href="https://github.com/card-io/card.io-Android-SDK">Android SDK</a> | <a href="https://github.com/card-io/card.io-Android-source"></a>Android source</a></li>
       <li class='small'><a href="https://github.com/card-io/card.io-iOS-SDK">iOS SDK</a> | <a href="https://github.com/card-io/card.io-iOS-source">iOS source</a></li>
     </ul>
 
