--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ love to chat.
   </div>
   <div class='row'>
     <div class="span3">
-        <a href="http://www.sephora.com/" target='_blank' id="sephoraLogo">Sephora</a>
+        <a href="http://www.lyft.com/" target='_blank' id="lyftLogo">Lyft</a>
     </div>
     <div class="span3">
         <a href="http://taskrabbit.com/" target='_blank' id="taskrabbitLogo">TaskRabbit</a>
