Remove copyright year to prevent yearly updates
Fixes card-io/card.io-Android-SDK#173

--- a/team/index.html
+++ b/team/index.html
@@ -236,7 +236,7 @@ love to chat.
     <li><a href='/team/'>Team</a></li>
     <li><a href="https://github.com/card-io/press-kit">Press Kit</a></li>
     <li><a href="/support/">Support</a></li>
-    <li>&copy; 2015 PayPal. All rights reserved.</li>
+    <li>&copy; PayPal. All rights reserved.</li>
   </ul>
 </footer>
 
